examples/test/testpolicy8324.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8324
  namespace: namespace399
spec:
  podSelector:
    matchLabels:
      key34: value36
      key17: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value9
      podSelector:
        matchLabels:
          key2: value49
          key23: value27
          key39: value20
